--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1 tabindex="1" style="background-color: blueviolet; color: cadetblue;">Estados de la republica mexicana</h1>
     <p class="contenido" tabindex="2" lang="en">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, id voluptates. Quae in ab vel tenetur, quidem magnam libero, ut est magni pariatur quaerat, doloribus voluptatum esse dicta enim exercitationem.</p>
     <p class="msj-error" id="p-secundario" tabindex="3" lang="es">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, reiciendis.</p>
+    <p style="border: 3px dashed blue;">Saludos                      a todos</p>
 </body>
 </html>
