add etiquetas del head

--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="México, estados, costumbres">
+    <meta name="author" content="MABM">
     <title>Atributos HTML</title>
+    <style>
+        h1{
+        background-color: blueviolet; 
+        color: cadetblue;
+    }
+    </style>
+    <script>
+        console.log("hola")
+    </script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 tabindex="1" style="background-color: blueviolet; color: cadetblue;">Estados de la republica mexicana</h1>
+    <h1 tabindex="1">Estados de la republica mexicana</h1>
     <p class="contenido" tabindex="2" lang="en">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, id voluptates. Quae in ab vel tenetur, quidem magnam libero, ut est magni pariatur quaerat, doloribus voluptatum esse dicta enim exercitationem.</p>
     <p class="msj-error" id="p-secundario" tabindex="3" lang="es">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, reiciendis.</p>
     <p style="border: 3px dashed blue;">Saludos                      a todos</p>
